# sqltrace

./: .gitignore  pyproject.toml  test.py
sqltrace/: _propagation.py  psycopg.py
